--- a/story/basic/basic.mdx
+++ b/story/basic/basic.mdx
@@ -1,7 +1,12 @@
 ---
-name: Hello world
+name: Basic
 ---
 
-# Hello world
+import { Basic } from "./basic.tsx";
+import { Playground } from 'docz'
 
-Hello, I'm a mdx file!
+# Basic
+
+<Playground>
+  <Basic />
+</Playground>
