update mdx import

--- a/story/basic/basic.mdx
+++ b/story/basic/basic.mdx
@@ -2,7 +2,7 @@
 name: Basic
 ---
 
-import { Basic } from "./basic.tsx";
+import { Basic } from "./basic";
 import { Playground } from 'docz'
 
 # Basic
