--- a/story/frame/frame.mdx
+++ b/story/frame/frame.mdx
@@ -3,15 +3,15 @@ name: Frame
 ---
 
 import { Frame } from "../../src/frame"
-import { Provider } from "../../src/provider"
+import { FrameProvider } from "../../src/provider"
 import { Playground } from 'docz'
 
 # Frame
 
 <Playground>
-  <Provider>
-      <Frame>
+  <FrameProvider>
+      <Frame name="first">
           First Frame
       </Frame>
-  </Provider>
+  </FrameProvider>
 </Playground>
