implement frame switcher

--- a/story/frame/frame.mdx
+++ b/story/frame/frame.mdx
@@ -9,7 +9,7 @@ import { Playground } from 'docz'
 # Frame
 
 <Playground>
-  <FrameProvider>
+  <FrameProvider active="first">
       <Frame name="first">
           First Frame
       </Frame>
