implament provider and frame

--- a/story/frame/frame.mdx
+++ b/story/frame/frame.mdx
@@ -9,9 +9,17 @@ import { Playground } from 'docz'
 # Frame
 
 <Playground>
-  <FrameProvider active="first">
-      <Frame name="first">
+  <FrameProvider
+    default="1"
+    active="1">
+      <Frame name="1">
           First Frame
+      </Frame>
+      <Frame name="2">
+          Second Frame
+      </Frame>
+      <Frame name="3">
+          Third Frame
       </Frame>
   </FrameProvider>
 </Playground>
