--- a/story/slider/slider.mdx
+++ b/story/slider/slider.mdx
@@ -1,15 +1,15 @@
 ---
-name: Frame
+name: Slider and Frame
 ---
 
 import { Frame } from "../../src/frame"
-import { FrameProvider } from "../../src/provider"
+import { Slider } from "../../src/slider"
 import { Playground } from 'docz'
 
-# Frame
+# Slider and Frame
 
 <Playground>
-  <FrameProvider
+  <Slider
     default="1"
     active="1">
       <Frame name="1">
@@ -21,5 +21,5 @@ import { Playground } from 'docz'
       <Frame name="3">
           Third Frame
       </Frame>
-  </FrameProvider>
+  </Slider>
 </Playground>
