fix test, story imports

--- a/story/slider/slider.mdx
+++ b/story/slider/slider.mdx
@@ -2,8 +2,8 @@
 name: Slider and Frame
 ---
 
-import { Frame } from "../../src/frame"
-import { Slider } from "../../src/slider"
+import { Frame } from "../../src/frame/frame"
+import { Slider } from "../../src/frame/slider"
 import { Playground } from 'docz'
 
 # Slider and Frame
